--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.resources.add-mappings=true
 
 spring.servlet.multipart.max-file-size=1000KB
 spring.servlet.multipart.max-request-size=1000KB
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
